WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170364
Incoming video source doesn't propogate frame rotation
https://bugs.webkit.org/show_bug.cgi?id=170364
Summary
Incoming video source doesn't propogate frame rotation
Eric Carlson
Reported
2017-03-31 14:55:18 PDT
Incoming video source doesn't propogate frame rotation
Attachments
Proposed patch
(4.11 KB, patch)
2017-03-31 15:07 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2017-03-31 15:07:39 PDT
Created
attachment 306018
[details]
Proposed patch
Radar WebKit Bug Importer
Comment 2
2017-03-31 15:43:50 PDT
<
rdar://problem/31381054
>
WebKit Commit Bot
Comment 3
2017-03-31 15:50:51 PDT
Comment on
attachment 306018
[details]
Proposed patch Clearing flags on attachment: 306018 Committed
r214694
: <
http://trac.webkit.org/changeset/214694
>
WebKit Commit Bot
Comment 4
2017-03-31 15:50:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug